Tests and bugfix